--- a/学习大会.md
+++ b/学习大会.md
@@ -1,378 +1,43 @@
-# 计算机基础
+# R:反射中获取类的方法：
 
-- 操作系统
-  -  **《操作系统导论》**、**《深入理解计算机系统》** 
-  - **《现代操作系统：原理与实现》**
-  - **《30 天自制操作系统》** 
-  -  **《从零实现一个操作系统内核！》** 
-  - 《自己动手写操作系统》、《现代操作系统》、《操作系统真象还原》、《深度探索 Linux 操作系统》、《操作系统设计与实现》、《Orange'S:一个操作系统的实现》 
-  - 课程： [《深入理解计算机系统 》](https://www.bilibili.com/video/av31289365?from=search&seid=16298868573410423104)
+- Class.ForName（类全路径）
+- 实例方法.getClass
+- 类名.Class
+- 子类.getSuperClass
+- 包装类.TYPE/ 包装类.Class
 
-纸上学来终觉浅 绝知此事要躬行！强烈推荐 CS 专业的小伙伴一定要多多实践！！！
+# d：CDN content Delivery NetWork 内容分发网络
 
-# 计算机网络
+CDN的全称是Content Delivery Network，即[内容分发网络](https://baike.baidu.com/item/%E5%86%85%E5%AE%B9%E5%88%86%E5%8F%91%E7%BD%91%E7%BB%9C/4034265)。
 
-- 要想学好计算机网络，首先要了解的就是 OSI 七层模型或 TCP/IP 五层模型，即应用层（应用层、表示层、会话层）、传输层、网络层、数据链路层、物理层。
+CDN是构建在现有网络基础之上的智能虚拟网络，依靠部署在各地的边缘服务器，通过中心平台的负载均衡、内容分发、调度等功能模块，使用户就近获取所需内容，降低网络拥塞，提高用户访问响应速度和命中率。CDN的关键技术主要有内容存储和分发技术。
 
-  ![osi七层模型](https://cdn.jsdelivr.net/gh/javaguide-tech/blog-images/2020-10/osi%E4%B8%83%E5%B1%82%E6%A8%A1%E5%9E%8B2.png)
+归纳起来，CDN具有以下主要功能：
 
-  - 机械工业出版社的《计算机网络——自顶向下方法》
-  - [《图解 HTTP》](https://book.douban.com/subject/25863515/) 
-  - [《网络是怎样连接的》](https://book.douban.com/subject/26941639/)
+(1)节省骨干网带宽，减少带宽需求量； [4] 
 
-  除了理论知识之外，学习计算机网络非常重要的一点就是：“**动手实践**”。这点和我们编程差不多。
+(2)提供服务器端加速，解决由于用户访问量大造成的服务器过载问题； [4] 
 
-  Github 上就有一些名校的计算机网络试验/Project：
+(3)服务商能使用Web Cache技术在本地缓存用户访问过的Web页面和对象，实现相同对象的访问无须占用主干的出口带宽，并提高用户访问因特网页面的相应时间的需求； [4] 
 
-  - [哈工大计算机网络实验](https://github.com/rccoder/HIT-Computer-Network)
-  - [《计算机网络－自顶向下方法(原书第 6 版)》编程作业，Wireshark 实验文档的翻译和解答。](https://github.com/moranzcw/Computer-Networking-A-Top-Down-Approach-NOTES)
-  - [计算机网络的期末 Project，用 Python 编写的聊天室](https://github.com/KevinWang15/network-pj-chatroom)
-  - [CMU 的计算机网络课程](https://computer-networks.github.io/sp19/lectures.html)
+(4)能克服网站分布不均的问题，并且能降低网站自身建设和维护成本； [4] 
 
-- 课程
+(5)降低“通信风暴”的影响，提高网络访问的稳定性。 [4] 
 
-  - **哈工大的计算机网络课程** [计算机网络_哈尔滨工业大学_中国大学MOOC(慕课) (icourse163.org)](https://www.icourse163.org/course/HIT-154005)
-  - **王道考研的计算机网络**
-    - [计算机网络常见面试题](https://snailclimb.gitee.io/javaguide/#/docs/network/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C)
-    - [计算机网络基础知识总结](https://snailclimb.gitee.io/javaguide/#/docs/network/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C%E7%9F%A5%E8%AF%86%E6%80%BB%E7%BB%93)
+## 怎样远程链接redis？
 
-# 数据结构与算法
+linux系统中：
 
-- [**《我的第一本算法书》**](https://book.douban.com/subject/30357170/)
-- [《算法图解》](https://book.douban.com/subject/26979890/)
-- [《啊哈!算法》](https://book.douban.com/subject/25894685/)
-- 普林斯顿：《算法 第四版》
+首先使用 whereis redis查到redis的安装路径
 
-# 计算机专业课
+在安装路径下找到 /bin/redis.conf，vim打开
 
-## 数据库
+- bind 0.0.0.0
+- requirepass password 
+- daemonize yes（:/需要搜索的单词）
 
-## 数据库基础
+ps -ef |grep redis查看redis状态，查到pid可以kill -9 pid关闭redis
 
-- 教材的话，强烈推荐 **《数据库系统概念》**
+./redis-cli redis.conf 以配置文件启动
 
-- 课程：[《数据库系统原理》](https://www.icourse163.org/course/BNU-1002842007)
-  - [《如何开发一个简单的数据库》](https://cstack.github.io/db_tutorial/) 
-
-## MySQL
-
-- **《MySQL 必知必会》** ：非常薄！非常适合 MySQL 新手阅读，很棒的入门教材。
-- **《高性能 MySQL》** ： MySQL 领域的经典之作！学习 MySQL 必看！属于进阶内容，主要教你如何更好地使用 MySQL 。既有有理论，又有实践！如果你没时间都看一遍的话，我建议第 5 章（创建高性能的索引） 、第 6 章（查询性能优化） 你一定要认真看一下。
-- **《MySQL 技术内幕》** ：你想深入了解 MySQL 存储引擎的话，看这本书准没错！
--  [《MySQL 是怎样运行的》](https://book.douban.com/subject/35231266/)
-- 课程： [《MySQL 数据库教程视频》](https://www.bilibili.com/video/BV1fx411X7BD)
-
-```properties
-学习了 MySQL 之后，务必确保自己掌握下面这些知识点：
-
-MySQL 常用命令 ：
-
-安全：登录、增加/删除用户、备份数据和还原数据
-数据库操作： 建库建表/删库删表、用户权限分配
-......
-MySQL 中常用的数据类型、字符集编码
-
-MySQL 简单查询、条件查询、模糊查询、多表查询以及如何对查询结果排序、过滤、分组......
-
-MySQL 中使用索引、视图、存储过程、游标、触发器
-
-......
-
-如果你想让自己更加了解 MySQL ，同时也是为了准备面试的话，下面这些知识点要格外注意：
-
-索引：索引优缺点、B 树和 B+树、聚集索引与非聚集索引、覆盖索引
-事务：事务、数据库事务、ACID、并发事务、事务隔离级别
-存储引擎（MyISAM 和 InnoDB）
-锁机制与 InnoDB 锁算法
-```
-
-## Redis
-
-**Redis 就是一个使用 C 语言开发的数据库**，不过与传统数据库不同的是 **Redis 的数据是存在内存中的** ，也就是它是内存数据库，所以读写速度非常快，因此 Redis 被广泛应用于缓存方向。
-
--  **《Redis 设计与实现》** 和 **《Redis 实战》**
-- 《Redis 开发与运维》 这本书也非常不错，既有基础介绍，又有一线开发运维经验分享。
-
-下面是我总结的一些关于并发的小问题，你可以拿来自测：
-
-1. Redis 和 Memcached 的区别和共同点
-2. 为什么要用 Redis/为什么要用缓存？
-3. Redis 常见数据结构以及使用场景分析
-4. Redis 没有使用多线程？为什么不使用多线程？Redis6.0 之后为何引入了多线程？
-5. Redis 给缓存数据设置过期时间有啥用？
-6. Redis 是如何判断数据是否过期的呢？
-7. 过期的数据的删除策略了解么？
-8. Redis 内存淘汰机制了解么？
-9. Redis 持久化机制(怎么保证 Redis 挂掉之后再重启数据可以进行恢复)
-10. Redis 缓存穿透、缓存雪崩？
-11. 如何保证缓存和数据库数据的一致性？
-12. ......
-
-# 编译原理
-
-编译原理相比于前面介绍的专业课，地位显得不那么重要了。编译原理的重要性主要体现在：
-
-- 底层语言、引擎或高级语言的开发，如 MySQL，Java 等
-- 操作系统或嵌入式系统的开发
-- 词法、语法、语义的思想，以及自动机思想
-
-**编译原理的重要前置课程就是形式语言与自动机，自动机的思想在词法分析当中有着重要应用，学习了这门课后，应该就会发现许多场景下，自动机算法的妙用了。**
-
-总的来说，这门课对于各位程序员的职业发展来说，相对不那么重要，但是从难度上来说，学习这门课可以对编程思想有一个较好的巩固。学习资源的话，除了课堂上的幻灯片课件以外，还可以把 《编译原理》 这本书作为参考书，用以辅助自己学不懂的地方（大家口中的龙书，想要啃下来还是有一定难度的）。
-
-其他书籍推荐:
-
-- **《现代编译原理》** ：编译原理的入门书。
-- **《编译器设计》** ： 覆盖了编译器从前端到后端的全部主题。书籍的难度还是比较高的，真心很难坚持看完。
-- 强烈推荐课程：[哈工大的编译原理视频课程](https://www.icourse163.org/course/HIT-1002123007)
-
-
-
-# 通用课
-
-## 数学
-
-微积分（高等数学）
-线性代数（高等代数）
-概率论与数理统计
-离散数学（集合论、图论、近世代数等）
-
-## 英语
-
-- **熟练使用英文界面的软件、系统等**
-- **对于外网的一些博客、bug 解决方案等，阅读无压力**
-- **熟练阅读英文文献**
-- **具备一定的英文论文的撰写能力**
-
-# Java
-
-Java 基础
-
-- **《Head First Java》**这本书在是入门 Java 的很不错的书籍 。
-
-- **《Java 核心技术卷 1+卷 2》** 这两本书也非常不错。不过，这两本书的内容很多，全看的话比较费时间。我现在是把这两本书当做工具书来用，就比如我平时写文章的时候，碰到一些 Java 基础方面的问题，经常就翻看这两本来当做参考！
-- **《Java 编程思想 》** 这本书被很多人称之为 Java 领域的圣经（*感觉有点过了~~~*）。不太推荐编程初学者阅读，有点劝退的味道，稍微有点基础后阅读更好。
-- Java 8 算是一个里程碑式的版本，现在一般企业还是用 Java 8 比较多。掌握 Java 8 的一些新特性比如 Lambda、Strean API 还是挺有必要的。这块的话，我推荐 **《Java 8 实战》** 这本书。
-
-记得多总结！打好基础！把自己重要的东西都记录下来。 API 文档放在自己可以看到的地方，以备自己可以随时查阅。为了能让自己写出更优秀的代码，《Effective Java》、《重构》 这两本书没事也可以看看。
-
-# 并发
-
-- **《Java 并发编程之美》** *这本书还是非常适合我们用来学习 Java 多线程的。这本书的讲解非常通俗易懂，作者从并发编程基础到实战都是信手拈来。*另外，这本书的作者加多自身也会经常在网上发布各种技术文章。这本书也是加多大佬这么多年在多线程领域的沉淀所得的结果吧！他书中的内容基本都是结合代码讲解，非常有说服力！
-
-- **《实战 Java 高并发程序设计》**比较适合作为多线程入门/进阶书籍来看。这本书内容同样是理论结合实战，对于每个知识点的讲解也比较通俗易懂，整体结构也比较清。
-
-- **《深入浅出 Java 多线程》**这本书是几位大厂的大佬开源的。
-
-  这几位作者为了写好《深入浅出 Java 多线程》这本书阅读了大量的 Java 多线程方面的书籍和博客，然后再加上他们的经验总结、Demo 实例、源码解析，最终才形成了这本书。
-
-  这本书的质量也是非常过硬！给作者们点个赞！这本书有统一的排版规则和语言风格、清晰的表达方式和逻辑。并且每篇文章初稿写完后，作者们就会互相审校，合并到主分支时所有成员会再次审校，最后再通篇修订了三遍。
-
-- **《Java 并发实现原理：JDK 源码剖析》**这本书是去年也就是 2020 年新出的，所以，现在知道的人还不是很多。
-
-  这本书主要是对 Java Concurrent 包中一些比较重要的源码进行了讲解，另外，像 JMM、happen-before、CAS 等等比较重要的并发知识这本书也都会一并介绍到。
-
-  不论是你想要深入研究 Java 并发，还是说要准备面试，你都可以看看这本书。
-
-下面是我总结的一些关于并发的小问题，你可以拿来自测：
-
-1. 什么是线程和进程? 线程与进程的关系,区别及优缺点？
-2. 说说并发与并行的区别?
-3. 为什么要使用多线程呢?
-4. 使用多线程可能带来什么问题?（内存泄漏、死锁、线程不安全等等）
-5. 创建线程有哪几种方式？（a.继承 Thread 类;b.实现 Runnable 接口;c. 使用 Executor 框架;d.使用 FutureTask）
-6. 说说线程的生命周期和状态?
-7. 什么是上下文切换?
-8. 什么是线程死锁?如何避免死锁?
-9. 说说 `sleep()` 方法和 `wait()` 方法区别和共同点?
-10. Java 内存模型（JMM）、重排序与 happens-before 原则了解吗？
-11. `synchronized` 关键字、volatile 关键字
-12. `ThreadLocal` 有啥用（解决了什么问题）？怎么用？原理了解吗？内存泄露问题了解吗？
-13. 为什么要用线程池？`ThreadPoolExecutor` 类的重要参数了解吗？`ThreadPoolExecutor` 饱和策略了解吗？线程池原理了解吗？几种常见的线程池了解吗？为什么不推荐使用`FixedThreadPool`？如何设置线程池的大小？
-14. AQS 了解么？原理？AQS 常用组件：`Semaphore` (信号量)、`CountDownLatch` （倒计时器） `CyclicBarrier`(循环栅栏)
-15. `ReentrantLock` 、 `ReentrantReadWriteLock` 、`StampedLock`（JDK8）
-16. CAS 了解么？原理？
-17. Atomic 原子类
-18. 并发容器：`ConcurrentHashMap` 、 `CopyOnWriteArrayList` 、 `ConcurrentLinkedQueue` `BlockingQueue` 、`ConcurrentSkipListMap`
-19. `Future` 和 `CompletableFuture`
-20. ......
-
-# JVM
-
-对于 Java 程序员来说，JVM 帮助我们做了很多事情比如内存管理、垃圾回收等等。在 JVM 的帮助下，我们的程序出现内存泄漏这些问题的概率相对来说是比较低的。但是，这并不代表我们在日常开发工作中不会遇到。万一你在工作中遇到了 OOM 问题，你至少要知道如何去排查和解决问题吧！
-
-并且，就单纯从面试角度来说，JVM 是 Java 后端面试（大厂）中非常重要的一环。不论是应届还是社招，面试国内的一些大厂，你都会被问到很多 JVM 相关的问题（应届的话侧重理论，社招实践）。
-
-只有搞懂了 JVM 才有可能真正把 Java 语言“吃透”。学习 JVM 这部分的内容，一定要注意要实战和理论结合。
-
-- **《深入理解 Java 虚拟机》** **国产书籍中的战斗机，实实在在的优秀！**不论是你面试还是你想要在 Java 领域学习的更深，你都离不开这本书籍。这本书不光要看，你还要多看几遍，里面都是干货。这本书里面还有一些需要自己实践的东西，我建议你也跟着实践一下。
-
--  **《实战 Java 虚拟机》**、**《虚拟机设计与实现:以 JVM 为例》**
-
-- 如果你对实战比较感兴趣，想要自己动手写一个简易的 JVM 的话，可以看看 **《自己动手写 Java 虚拟机》** 这本书。
-
-  - 书中的代码是基于 Go 语言实现的，搞懂了原理之后，你可以使用 Java 语言模仿着写一个，也算是练练手！ 如果你当前没有能力独立使用 Java 语言模仿着写一个的话，你也可以在网上找到很多基于 Java 语言版本的实现，比如[《zachaxy 的手写 JVM 系列》](https://zachaxy.github.io/tags/JVM/) 。
-
-    这本书目前在豆瓣有 8.2 的评分，我个人觉得张秀宏老师写的挺好的，这本书值得更高的评分。
-
-    另外，R 大在豆瓣发的[《从表到里学习 JVM 实现》](https://www.douban.com/doulist/2545443/)这篇文章中也推荐了很多不错的 JVM 相关的书籍，推荐小伙伴们去看看。
-
-    再推荐两个视频给喜欢看视频学习的小伙伴。
-
-    第 1 个是尚硅谷的宋红康老师讲的[《JVM 全套教程》](https://www.bilibili.com/video/BV1PJ411n7xZ)。这个课程的内容非常硬，一共有接近 400 小节。
-
-    课程的内容分为 3 部分：
-
-    1. 《内存与垃圾回收篇》
-    2. 《字节码与类的加载篇》
-    3. 《性能监控与调优篇》
-
-- 你假笨大佬的 **《JVM 参数【Memory 篇】》** 教程，很厉害了！
-
-下面是我总结的一些关于 JVM 的小问题，你可以拿来自测：
-
-1. 什么是虚拟机？
-2. Java 内存区域是怎么划分的？大对象放在哪个内存区域？
-3. 垃圾回收有哪些算法？GC 的流程
-4. 什么是类加载？何时类加载？类加载流程？
-5. 知道哪些类加载器。类加载器之间的关系？
-6. 类加载器的双亲委派了解么？ 结合 Tomcat 说一下双亲委派（Tomcat 如何打破双亲委托机制？...）。
-7. 常见调优参数有哪些？
-8. ......
-
-# 常用工具
-
-非常重要！非常重要！特别是 Git 和 Docker。
-
-1. **IDEA** ：熟悉基本操作以及常用快捷。你可以通过 Github 上的开源教程 [《IntelliJ IDEA 简体中文专题教程》](https://github.com/judasn/IntelliJ-IDEA-Tutorial) 来学习 IDEA 的使用。
-2. **Maven** ：强烈建议学习常用框架之前可以提前花几天时间学习一下**Maven**的使用。（到处找 Jar 包，下载 Jar 包是真的麻烦费事，使用 Maven 可以为你省很多事情）。
-3. **Git** ：基本的 Git 技能也是必备的，试着在学习的过程中将自己的代码托管在 Github 上。你可以看看这篇 Github 上开源的 [《Git 极简入门》](https://snailclimb.gitee.io/javaguide/#/docs/tools/Git) 。
-4. **Docker** ：学着用 Docker 安装学习中需要用到的软件比如 MySQL ,这样方便很多，可以为你节省不少时间。你可以看看这篇 Github 上开源的 [《Docker 基本概念解读》](https://snailclimb.gitee.io/javaguide/#/docs/tools/Docker) 、[《一文搞懂 Docker 镜像的常用操作！》](https://snailclimb.gitee.io/javaguide/#/docs/tools/Docker-Image)
-
-除了这些工具之外，我强烈建议你一定要搞懂 Github 的使用。一些使用 Github 的小技巧，你可以看[《Github 小技巧》](https://snailclimb.gitee.io/javaguide/#/docs/tools/Github%E6%8A%80%E5%B7%A7)这篇文章。
-
-# 常用框架
-
-###  Spring/SpringBoot
-
-**Spring 和 SpringBoot 真的很重要！**
-
-一定要搞懂 AOP 和 IOC 这两个概念。Spring 中 bean 的作用域与生命周期、SpringMVC 工作原理详解等等知识点都是非常重要的，一定要搞懂。
-
-企业中做 Java 后端，你一定离不开 SpringBoot ，这个是必备的技能了！一定一定一定要学好！
-
-像 SpringBoot 和一些常见技术的整合你也要知识怎么做，比如 SpringBoot 整合 MyBatis、 ElasticSearch、SpringSecurity、Redis 等等。
-
-- **《Spring 实战》**不建议当做入门书籍读，入门的话可以找点国人的书或者视频看。这本定位就相当于是关于 Spring 的一个概览，只有一些基本概念的介绍和示例，涵盖了 Spring 的各个方面，但都不够深入。就像作者在最后一页写的那样：“学习 Spring，这才刚刚开始”。
-
-- **《Spring 5 高级编程》**工具人！
-
-  对于 Spring5 的新特性介绍的比较详细，也说不上好。另外，感觉全书翻译的有一点蹩脚的味道，还有一点枯燥。全书的内容比较多，我一般拿来当做工具书参考。
-
-- **《Spring Boot 编程思想（核心篇）》**SpringBoot 解析，不适合初学者。我是去年入手的，现在就看了几章，后面没看下去。书很厚，感觉很多很多知识点的讲解过于啰嗦和拖沓，不过，这本书对于 SpringBoot 内部原理讲解的还是很清楚。
-
-- **《Spring Boot 实战》**比较一般的一本书，可以简单拿来看一下。
-
-- **《Spring Boot 实战派》这本书使用的 Spring Boot 2.0+的版本，还算比较新。整本书采用“知识点+实例”的形式编写。**
-
-  **另外，这本书的干货很多，作者在注意实战的过程中还不忘记对于一些重要的基础知识的讲解。**
-
-  **如果你要学习 Spring Boot 的话，我还是比较推荐这本书的。**
-
-###  Netty
-
-但凡涉及到网络通信就必然必然离不开网络编程。 Netty 目前作为 Java 网络编程最热门的框架，毫不夸张地说是每个 Java 程序员必备的技能之一。
-
-**为什么说学好 Netty 很有必要呢？**
-
-1. Netty 基于 NIO （NIO 是一种同步非阻塞的 I/O 模型，在 Java 1.4 中引入了 NIO ）。使用 Netty 可以极大地简化并简化了 TCP 和 UDP 套接字服务器等网络编程,并且性能以及安全性等很多方面都非常优秀。
-2. 我们平常经常接触的 Dubbo、RocketMQ、Elasticsearch、gRPC、Spark、Elasticsearch 等等热门开源项目都用到了 Netty。
-3. 大部分微服务框架底层涉及到网络通信的部分都是基于 Netty 来做的，比如说 Spring Cloud 生态系统中的网关 Spring Cloud Gateway 。
-
-推荐书籍：
-
-- **《Netty 实战》**这本书可以用来入门 Netty ，内容从 BIO 聊到了 NIO、之后才详细介绍为什么有 Netty 、Netty 为什么好用以及 Netty 重要的知识点讲解。
-
-  这本书基本把 Netty 一些重要的知识点都介绍到了，而且基本都是通过实战的形式讲解。
-
-- **《Netty 进阶之路：跟着案例学 Netty》**内容都是关于使用 Netty 的实践案例比如内存泄露这些东西。如果你觉得你的 Netty 已经完全入门了，并且你想要对 Netty 掌握的更深的话，推荐你看一下这本书。
-
-- **《Netty 入门与实战：仿写微信 IM 即时通讯系统》***质量很高的一个小册！*
-
-  通过一个基于 Netty 框架实现 IM 核心系统为引子，带你学习 Netty。整个小册的质量还是很高的，即使你没有 Netty 使用经验也能看懂。
-
-#  性能调优
-
-- **《Java 性能权威指南》**这本书介绍的实战内容很不错，尤其是 JVM 调优，缺点也比较明显，就是内容稍微有点老。市面上这种书很少。这本书不适合初学者，建议对 Java 语言已经比价掌握了再看。另外，阅读之前，最好先看看周志明大佬的《深入理解 Java 虚拟机》
-
-##  网站架构
-
-- 看过很多网站架构方面的书籍，比如《大型网站技术架构：核心原理与案例分析》、《亿级流量网站架构核心技术》、《架构修炼之道——亿级网关、平台开放、分布式、微服务、容错等核心技术修炼实践》等等。
-
-  目前我觉得能推荐的只有李运华老师的**[《从零开始学架构》](https://book.douban.com/subject/30335935/)** 这本。
-
-  这本书对应的有一个极客时间的专栏—《从零开始学架构》，里面的很多内容都是这个专栏里面的，两者买其一就可以了。我看了很小一部分，内容挺全面的，是一本真正在讲如何做架构的书籍。
-
-# 面试
-
-**《JavaGuide 面试突击版》**
-
-# 软件质量
-
-下面推荐都是我看过并且我觉得值得推荐的书籍。
-
-不过，这些书籍都比较偏理论，只能帮助你建立一个写优秀代码的意识标准。 如果你想要编写更高质量的代码、更高质量的软件，还是应该多去看优秀的源码，多去学习优秀的代码实践。
-
-## 代码整洁之道
-
-- **《重构》**必看书籍！无需多言。编程书籍领域的瑰宝。
-
-  世界顶级、国宝级别的 Martin Fowler 的书籍，可以说是软件开发领域最经典的几本书之一。目前已经出了第二版。
-
-  这是一本值得你看很多遍的书籍。
-
-- **《Clean Code》**《Clean Code》是 Bob 大叔的一本经典著作，强烈建议小伙伴们一定要看看。
-
-  Bob 大叔将自己对整洁代码的理解浓缩在了这本书中，真可谓是对后生的一大馈赠。
-
-- **《代码大全》**我简单地浏览过全书的内容，感觉内容总体比较虚，对于大部分程序员的作用其实不大。如果你想要切实地提高自己的代码质量，《Clean Code》和 《编写可读代码的艺术》我觉得都要比《代码大全》这本书更好。
-
-- **《编写可读代码的艺术》**在我看来，如果你看过 《Clean Code》 的话，就不需要再看这本书了。当然，如果你有时间和精力，也可以快速过一遍。另外，我这里还要推荐一个叫做 **write-readable-code** 的仓库。这个仓库的作者免费分享了一系列基于《编写可读代码的艺术》这本书的视频。这一系列视频会基于 Java 语言来教你如何优化咱们的代码。
-
-  在实践中学习的效果肯定会更好！推荐小伙伴们都抓紧学起来啊！
-
-- **《Effective java 》Java 程序员必看！**
-
-  **又是一本 Java 领域国宝级别的书，非常经典。这本书主要介绍了在 Java 编程中很多极具实用价值的经验规则，这些经验规则涵盖了大多数开发人员每天所面临的问题的解决方案。这篇文章能够非常实际地帮助你写出更加清晰、健壮和高效的代码。本书中的每条规则都以简短、独立的小文章形式出现，并通过例子代码加以进一步说明。**
-
-## 程序员职业素养
-
-- **《 The Clean Coder》**
-
-## 架构整洁之道
-
-- **《架构整洁之道》**
-
-## 项目管理
-
-- **《人月神话》**这本书主要描述了软件开发的基本定律：**一个需要 10 天才能干完的活，不可能让 10 个人在 1 天干完！**
-
-  看书名的第一眼，感觉不像是技术类的书籍。但是，就是这样一个看似和编程不沾边的书名，却成了编程领域长久相传的经典。
-
-  **这本书对于现代软件尤其是复杂软件的开发的规范化有深刻的意义。**
-
-- **《领域驱动设计:软件核心复杂性应对之道》**这本领域驱动设计方面的经典之作一直被各种推荐。
-
-## 软件质量其他书籍推荐
-
-- [《代码的未来》](https://book.douban.com/subject/24536403/) ：这本书的作者是 Ruby 之父松本行弘，算是一本年代比较久远的书籍（13 年出版），不过，还是非常值得一读。这本书的内容主要介绍是编程/编程语言的本质。我个人还是比较喜欢松本行弘的文字风格，并且，你看他的文章也确实能够有所收获。
-- [《深入浅出设计模式》](https://book.douban.com/subject/1488876/) ： 比较有趣的风格，适合设计模式入门。
-- [《软件架构设计:大型网站技术架构与业务架构融合之道》](https://book.douban.com/subject/30443578/) ： 内容非常全面。适合面试前突击一些比较重要的理论知识，也适合拿来扩充/完善自己的技术广度。
-- [《微服务架构设计模式》](https://book.douban.com/subject/33425123/) ：这本书是世界十大软件架构师之一、微服务架构先驱 Chris Richardson 亲笔撰写，豆瓣评分 9.6。示例代码使用 Java 语言和 Spring 框架。帮助你设计、实现、测试和部署基于微服务的应用程序。
-
-# 开发手册
-
-最后再推荐两个相关的文档：
-
-- **阿里巴巴 Java 开发手册** ：<https://github.com/alibaba/p3c>
-- **Google Java 编程风格指南：** <http://www.hawstein.com/posts/google-java-style.html>
+ ./redis-server -a password shutdown
